# HtmlMails

./: .env_example  .gitignore  README.md  index.html  main.py  pyproject.toml  settings.py
